fix: products position on mobile, add new fonts and styles to shoping-cart and cart-page components

--- a/src/app/modules/commerce/checkout-page/checkout-page.component.scss
+++ b/src/app/modules/commerce/checkout-page/checkout-page.component.scss
@@ -51,6 +51,7 @@
     color: $link-color;
     font-size: 32px;
     font-weight: 600;
+    font-family: $font-hind;
   }
 
 
