--- a/src/app/modules/main/main-page/main-page.component.scss
+++ b/src/app/modules/main/main-page/main-page.component.scss
@@ -17,6 +17,7 @@
   .products__list {
     padding: 80px 0;
     display: grid;
+    justify-content: center;
     grid-template-columns: repeat(auto-fit, 285px);
     gap: 32px;
   }
